--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -27,3 +27,35 @@ body {
     font-size: 1rem;
     font-family: "Arvo", serif;
 }
+
+
+/* Header */
+
+header {
+    background-color: #fff;
+    box-shadow: 0px 1px 10px #e5e4e4ca;
+}
+
+header .header-content {
+    display: flex;
+    gap: 5px;
+    padding-left: 80px;
+    padding-right: 100px;
+    align-items: center;
+    -webkit-column-gap: 5px;
+    justify-content: space-between;
+}
+
+.header-content .logo img {
+    width: 5rem;
+}
+
+.header-content .list {
+    display: flex;
+    gap: 20px;
+    -webkit-column-gap: 20px;
+}
+
+.header-content .list a {
+    color: #000;
+}
