--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -62,3 +62,24 @@ header .header-content {
 
 
 /* Home page */
+
+.circle-btn {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    gap: 10px;
+    -webkit-column-gap: 10px;
+}
+
+.circle-btn .circle {
+    width: 12px;
+    height: 12px;
+    cursor: pointer;
+    border-radius: 50%;
+    border: 1px solid #dde1e7;
+}
+
+.circle-btn .circle.active {
+    background-color: #000;
+    border: 1px solid #000;
+}
