--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -63,6 +63,11 @@ header .header-content {
 
 /* Home page */
 
+.home-section {
+    width: 100%;
+    height: 100vh;
+}
+
 .circle-btn {
     display: flex;
     justify-content: center;
