--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -32,6 +32,10 @@ body {
 /* Header */
 
 header {
+    width: 100%;
+    position: fixed;
+    z-index: 10;
+    top: 0;
     background-color: #fff;
     box-shadow: 0px 1px 10px #e5e4e4ca;
 }
@@ -66,6 +70,31 @@ header .header-content {
 .home-section {
     width: 100%;
     height: 100vh;
+}
+
+.home-images {
+    z-index: 1;
+    position: relative;
+}
+
+.home-images::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to right, #00000096 0%, #e7e7e797 100%);
+    z-index: 2;
+    pointer-events: none;
+}
+
+.home-images .home-bg {
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+    position: relative;
+    z-index: 1;
 }
 
 .circle-btn {
