--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -84,9 +84,9 @@ header .header-content {
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(to right, #00000096 0%, #e7e7e797 100%);
     z-index: 2;
     pointer-events: none;
+    background: hsl(200, 10%, 90%);
 }
 
 .home-images .home-bg {
@@ -102,6 +102,11 @@ header .header-content {
     justify-content: center;
     margin-top: 20px;
     gap: 10px;
+    left: 0;
+    right: 0;
+    position: absolute;
+    bottom: 10%;
+    z-index: 200;
     -webkit-column-gap: 10px;
 }
 
