--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -86,7 +86,7 @@ header .header-content {
     height: 100%;
     z-index: 2;
     pointer-events: none;
-    background: hsl(200, 10%, 90%);
+    background: hsla(201, 17%, 29%, 0.863);
 }
 
 .home-images .home-bg {
