--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -25,7 +25,8 @@ h6 {
 
 body {
     font-size: 1rem;
-    font-family: "Arvo", serif;
+    font-family: "Poppins", sans-serif;
+    font-weight: 300;
 }
 
 
@@ -36,8 +37,7 @@ header {
     position: fixed;
     z-index: 10;
     top: 0;
-    background-color: #fff;
-    box-shadow: 0px 1px 10px #e5e4e4ca;
+    background: hsla(201, 17%, 29%, 0.863);
 }
 
 header .header-content {
@@ -61,7 +61,7 @@ header .header-content {
 }
 
 .header-content .list a {
-    color: #000;
+    color: #ffff;
 }
 
 
