--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -68,19 +68,30 @@ header .header-content {
 /* Home page */
 
 .home-section {
-    width: 100%;
-    height: 100vh;
-}
-
-.home-text {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+    /* Ensure elements stack vertically */
+    width: 100%;
+    height: 100vh;
+    position: relative;
+}
+
+.home-text {
+    z-index: 10;
+    text-align: center;
+    /* Center text horizontally */
 }
 
 .home-images {
     z-index: 1;
-    position: relative;
+    position: absolute;
+    /* Position images absolutely to fill the section */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .home-images::before {
@@ -99,7 +110,7 @@ header .header-content {
     width: 100%;
     height: 100vh;
     object-fit: cover;
-    position: relative;
+    position: absolute;
     z-index: 1;
 }
 
