add to my repository

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -116,11 +116,13 @@ header .header-content {
     width: fit-content;
     padding: 10px 25px;
     border-radius: 25px;
+    transition-delay: 0.4s;
+    transition: 0.4s ease-in-out;
     background-color: #827e59da;
 }
 
 .home-text a:hover {
-    border: 3px solid hsla(198, 28%, 77%, 0.845);
+    border: 1px solid #e5e5e550;
     background-color: #141b1fda;
 }
 
