--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -35,7 +35,7 @@ body {
 header {
     width: 100%;
     position: fixed;
-    z-index: 10;
+    z-index: 1000;
     top: 0;
     background: #141b1fda;
 }
@@ -199,8 +199,8 @@ header .header-content {
 .about .title div {
     display: flex;
     align-items: center;
-    gap: 10px;
-    -webkit-column-gap: 10px;
+    gap: 8px;
+    -webkit-column-gap: 8px;
 }
 
 .about .title div h4 {
@@ -211,7 +211,7 @@ header .header-content {
 
 .about .title div p {
     padding: 1px;
-    width: 5%;
+    width: 8%;
     background-color: #cecece94;
 }
 
@@ -226,7 +226,12 @@ header .header-content {
     gap: 10px;
     align-items: center;
     -webkit-column-gap: 10px;
-    grid-template-columns: auto auto;
+    grid-template-columns: 50% auto;
+}
+
+.about .about-image img {
+    width: 100%;
+    max-width: 1000px;
 }
 
 .about .about-content .about-text i {
