--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -246,3 +246,29 @@ header .header-content {
     padding-right: 100px;
     padding-top: 50px;
 }
+
+.choose-us-content {
+    display: grid;
+    gap: 10px;
+    -webkit-column-gap: 10px;
+    grid-template-columns: auto auto;
+}
+
+.choose-us-item {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 20px 25px;
+    border-radius: 5px;
+    display: flex;
+    gap: 20px;
+    -webkit-column-gap: 20px;
+    box-shadow: 0px 1px 10px #cecece94;
+}
+
+.choose-us-item i {
+    padding: 10px;
+    height: fit-content;
+    border-radius: 5px;
+    background: #e0e0e0;
+    box-shadow: inset 7px 7px 14px #c1c1c1, inset -7px -7px 14px #ffffff;
+}
