--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -247,6 +247,10 @@ header .header-content {
     padding-top: 50px;
 }
 
+.choose-us .title h2 {
+    margin-bottom: 30px;
+}
+
 .choose-us-content {
     display: grid;
     gap: 10px;
@@ -261,6 +265,12 @@ header .header-content {
     gap: 20px;
     -webkit-column-gap: 20px;
     box-shadow: 0px 1px 10px #cecece94;
+}
+
+.choose-us-item div h4 {
+    font-size: 15px;
+    margin-bottom: 15px;
+    font-weight: 600;
 }
 
 .choose-us-item i {
