--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -264,7 +264,7 @@ header .header-content {
     display: flex;
     gap: 20px;
     -webkit-column-gap: 20px;
-    box-shadow: 0px 1px 10px #cecece94;
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.0901960784);
 }
 
 .choose-us-item div h4 {
