--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -263,8 +263,21 @@ header .header-content {
     border-radius: 5px;
     display: flex;
     gap: 20px;
+    transition-delay: 0.4s;
+    transition: 0.8s ease-in-out;
     -webkit-column-gap: 20px;
     box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.0901960784);
+}
+
+.choose-us-item:hover {
+    color: #fff;
+    background-color: #141b1fda;
+}
+
+.choose-us-item:hover i {
+    background: unset;
+    box-shadow: unset;
+    border: 1px solid #fff;
 }
 
 .choose-us-item div h4 {
