--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -24,7 +24,7 @@ h6 {
 /* Body */
 
 body {
-    font-size: 1rem;
+    font-size: 0.9rem;
     font-family: "Poppins", sans-serif;
     font-weight: 300;
 }
@@ -301,4 +301,33 @@ header .header-content {
     padding-left: 100px;
     padding-right: 100px;
     padding-top: 50px;
+}
+
+
+/*---------------------------------------/
+#Newsletter
+/---------------------------------------*/
+
+.newsletter {
+    padding-left: 100px;
+    padding-right: 100px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    margin-top: 100px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    -webkit-column-gap: 10px;
+    justify-content: space-between;
+    background: linear-gradient(to right, #141b1fda 0%, #dde1e78b 100%), url(../images/new.jpg) fixed center center;
+    background-size: cover;
+}
+
+.newsletter .newstext {
+    color: #fff;
+}
+
+.newsletter .newstext h3 {
+    color: #aca356da;
+    margin-bottom: 5px;
 }
