--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -311,8 +311,8 @@ header .header-content {
 .newsletter {
     padding-left: 100px;
     padding-right: 100px;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding-top: 100px;
+    padding-bottom: 100px;
     margin-top: 100px;
     display: flex;
     align-items: center;
@@ -330,4 +330,11 @@ header .header-content {
 .newsletter .newstext h3 {
     color: #aca356da;
     margin-bottom: 5px;
+}
+
+.newsletter input,
+button {
+    border: none;
+    outline: none;
+    background: unset;
 }
