--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -423,7 +423,14 @@ textarea {
     width: fit-content;
     color: #fff;
     margin: auto;
+    margin-top: 10px;
     padding: 15px 20px;
     border-radius: 30px;
     background-color: #141b1fda;
+    transition-delay: 0.4s;
+    transition: 0.8s ease-in-out;
+}
+
+.contact .contact-input button:hover {
+    background-color: #141b1ff5;
 }
