add to my repository

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1,4 +1,6 @@
-/* Reset */
+/*---------------------------------------/
+#Reset
+/---------------------------------------*/
 
 * {
     margin: 0;
@@ -9,7 +11,9 @@
 }
 
 
-/* Titles */
+/*---------------------------------------/
+#Titles
+/---------------------------------------*/
 
 h1,
 h2,
@@ -21,7 +25,9 @@ h6 {
 }
 
 
-/* Body */
+/*---------------------------------------/
+#Body
+/---------------------------------------*/
 
 body {
     font-size: 0.9rem;
@@ -30,7 +36,9 @@ body {
 }
 
 
-/* Header */
+/*---------------------------------------/
+#Header
+/---------------------------------------*/
 
 header {
     width: 100%;
@@ -89,7 +97,9 @@ header .header-content {
 }
 
 
-/* Home page */
+/*---------------------------------------/
+#Home page
+/---------------------------------------*/
 
 .home-section {
     display: flex;
@@ -188,7 +198,9 @@ header .header-content {
 }
 
 
-/* About us */
+/*---------------------------------------/
+#About us
+/---------------------------------------*/
 
 .about {
     padding-left: 100px;
@@ -239,7 +251,9 @@ header .header-content {
 }
 
 
-/* Why to choose us */
+/*---------------------------------------/
+#Why to choose us
+/---------------------------------------*/
 
 .choose-us {
     padding-left: 100px;
@@ -295,12 +309,24 @@ header .header-content {
 }
 
 
-/* Our products */
+/*---------------------------------------/
+#Our products
+/---------------------------------------*/
 
 .product {
     padding-left: 100px;
     padding-right: 100px;
     padding-top: 50px;
+}
+
+.prod-container {
+    margin-top: 40px;
+}
+
+.prod-item img {
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
 }
 
 
