--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -324,7 +324,8 @@ header .header-content {
 }
 
 .prod-item img {
-    width: 25%;
+    width: 100%;
+    max-width: 300px;
     height: 35vh;
     object-fit: cover;
 }
