--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -320,13 +320,14 @@ header .header-content {
 }
 
 .prod-container {
+    width: 100%;
     margin-top: 40px;
+    display: flex;
 }
 
 .prod-item img {
-    width: 100%;
-    max-width: 300px;
-    height: 35vh;
+    width: 350px;
+    height: 350px;
     object-fit: cover;
 }
 
