--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -323,17 +323,21 @@ header .header-content {
     width: 100%;
     margin-top: 40px;
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
 }
 
 .prod-item img {
-    width: 350px;
-    height: 350px;
+    width: 330px;
+    height: 330px;
     object-fit: cover;
 }
 
 .prod-item .item {
+    margin-top: -10px;
     padding: 10px 15px;
-    background-color: #cecece94;
+    border: 1px solid #cecece94;
 }
 
 
