add to my repository

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -332,6 +332,7 @@ header .header-content {
     width: 300px;
     height: 300px;
     object-fit: cover;
+    background-color: #cecece94;
 }
 
 .prod-item .item {
