add to my repository

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -356,6 +356,16 @@ header .header-content {
     color: #827e59da;
 }
 
+.prod-item .item .panier {
+    display: flex;
+    justify-content: flex;
+    width: fit-content;
+    padding: 12px 15px;
+    border-radius: 50%;
+    color: #fff;
+    background-color: #141b1fda;
+}
+
 
 /*---------------------------------------/
 #Newsletter
