--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -487,6 +487,24 @@ button {
     background-color: #141b1ff5;
 }
 
+.shoes-item .shoes {
+    position: relative;
+}
+
+.shoes-item .shoes div {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    top: 0;
+}
+
+.shoes-item .shoes img {
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+    background-color: #c2c2c2;
+}
+
 
 /*---------------------------------------/
 #Contacts
