--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -487,6 +487,15 @@ button {
     background-color: #141b1ff5;
 }
 
+.shoes-item {
+    margin-top: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+    -webkit-column-gap: 15px;
+    justify-content: center;
+}
+
 .shoes-item .shoes {
     position: relative;
 }
