--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -506,7 +506,8 @@ button {
     left: 15px;
     right: 15px;
     font-size: 0.8rem;
-    padding: 10px 15px;
+    padding: 15px 15px;
+    text-align: center;
     background-color: #fff;
 }
 
