--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -500,15 +500,22 @@ button {
     position: relative;
 }
 
-.shoes-item .shoes div {
+.shoes-item .shoes .overlay {
     position: absolute;
-    bottom: 20px;
-    left: 15px;
-    right: 15px;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: #fff;
     font-size: 0.8rem;
-    padding: 15px 15px;
-    text-align: center;
-    background-color: #fff;
+}
+
+.shoes-item .shoes:hover .overlay {
+    display: flex;
 }
 
 .shoes-item .shoes img {
