--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -473,11 +473,19 @@ button {
 }
 
 .categories-list ul li {
-    color: #fff;
+    color: #000;
     cursor: pointer;
     font-size: 0.8rem;
     padding: 10px 20px;
     border-radius: 20px;
+    transition-delay: 0.4s;
+    transition: 0.8s ease-in-out;
+    background-color: #fff;
+    box-shadow: 0px 1px 10px #c2c2c25d;
+}
+
+.active {
+    color: #fff;
     transition-delay: 0.4s;
     transition: 0.8s ease-in-out;
     background-color: #141b1fda;
@@ -509,8 +517,9 @@ button {
     display: none;
     align-items: center;
     justify-content: center;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.59);
     color: #fff;
+    font-weight: 700;
     font-size: 0.8rem;
 }
 
