--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -484,14 +484,11 @@ button {
     box-shadow: 0px 1px 10px #c2c2c25d;
 }
 
-.active {
+.categories-list ul li.active {
     color: #fff;
     transition-delay: 0.4s;
     transition: 0.8s ease-in-out;
     background-color: #141b1fda;
-}
-
-.categories-list ul li:hover {
     background-color: #141b1ff5;
 }
 
