--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -494,7 +494,8 @@ button {
 
 .shoes-item {
     margin-top: 30px;
-    display: flex;
+    display: none;
+    /* Cacher par défaut */
     flex-wrap: wrap;
     gap: 15px;
     -webkit-column-gap: 15px;
@@ -529,6 +530,18 @@ button {
     height: 300px;
     object-fit: cover;
     background-color: #c2c2c2;
+}
+
+.men-shoes {
+    display: flex;
+}
+
+.wemen {
+    display: none;
+}
+
+.children {
+    display: none;
 }
 
 
