add to my repository

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -280,7 +280,7 @@ header .header-content {
     transition-delay: 0.4s;
     transition: 0.8s ease-in-out;
     -webkit-column-gap: 20px;
-    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.0901960784);
+    box-shadow: 0px 5px 15px #00000017;
 }
 
 .choose-us-item:hover {
