--- a/asset/css/product.css
+++ b/asset/css/product.css
@@ -1,3 +1,7 @@
+/*-----------------------------------/
+#Product page
+/-----------------------------------*/
+
 .product-home {
     width: 100%;
     height: 60vh;
@@ -13,4 +17,10 @@
 .product-home h3 {
     font-size: 30px;
     margin-bottom: 10px;
+}
+
+.product-type {
+    padding-left: 100px;
+    padding-right: 100px;
+    margin-top: 40px;
 }
