--- a/asset/css/product.css
+++ b/asset/css/product.css
@@ -24,3 +24,27 @@
     padding-right: 100px;
     margin-top: 40px;
 }
+
+.big-image {
+    width: 100%;
+    height: 50vh;
+    object-fit: cover;
+}
+
+.product-type .prod-type-item {
+    width: 100%;
+}
+
+.product-type .prod-type-item div {
+    width: 100%;
+    gap: 10px;
+    display: grid;
+    -webkit-column-gap: 10px;
+    grid-template-columns: auto auto auto auto;
+}
+
+.small-image {
+    width: 100%;
+    height: 20vh;
+    object-fit: cover;
+}
