--- a/asset/css/product.css
+++ b/asset/css/product.css
@@ -54,3 +54,13 @@
     height: 70%;
     object-fit: cover;
 }
+
+.shoes-text a {
+    color: #fff;
+    padding: 10px 15px;
+    display: flex;
+    margin-top: 20px;
+    width: fit-content;
+    border-radius: 20px;
+    background-color: #141b1fda;
+}
