--- a/asset/css/product.css
+++ b/asset/css/product.css
@@ -55,11 +55,29 @@
     object-fit: cover;
 }
 
-.shoes-text a {
+.cart {
+    display: flex;
+    margin-top: 20px;
+    gap: 10px;
+    -webkit-column-gap: 10px;
+}
+
+.cart select {
+    border: none;
+    outline: none;
+    padding: 10px 15px;
+    font-size: 0.8rem;
+    border-radius: 20px;
+    background-color: #fff;
+    font-family: "Poppins", sans-serif;
+    box-shadow: 0px 1px 10px #00000017;
+}
+
+.cart a {
     color: #fff;
     padding: 10px 15px;
     display: flex;
-    margin-top: 20px;
+    font-size: 0.8rem;
     width: fit-content;
     border-radius: 20px;
     background-color: #141b1fda;
