--- a/asset/css/product.css
+++ b/asset/css/product.css
@@ -73,6 +73,44 @@
     box-shadow: 0px 1px 10px #00000017;
 }
 
+.dropdown-btn {
+    color: white;
+    padding: 10px 15px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    text-align: left;
+    color: #000;
+    font-size: 0.8rem;
+    border-radius: 20px;
+    background-color: #fff;
+    box-shadow: 0px 1px 10px #00000017;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px #00000033;
+    z-index: 1;
+}
+
+.dropdown-content label {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content label:hover {
+    background-color: #f1f1f1;
+}
+
+.custom-dropdown:hover .dropdown-content {
+    display: block;
+}
+
 .cart a {
     color: #fff;
     padding: 10px 15px;
