--- a/asset/css/product.css
+++ b/asset/css/product.css
@@ -120,3 +120,26 @@
     border-radius: 20px;
     background-color: #141b1fda;
 }
+
+
+/*-----------------------------------/
+#Shoes details page
+/-----------------------------------*/
+
+.shoes-details {
+    width: 100%;
+    height: 100vh;
+    display: grid;
+    gap: 40px;
+    align-items: center;
+    padding-left: 150px;
+    padding-right: 150px;
+    -webkit-column-gap: 40px;
+    grid-template-columns: 50% auto;
+}
+
+.shoes-image .big-image {
+    width: 100%;
+    height: 50vh;
+    object-fit: cover;
+}
