--- a/asset/css/product.css
+++ b/asset/css/product.css
@@ -90,15 +90,17 @@
 .dropdown-content {
     display: none;
     position: absolute;
+    border-radius: 10px;
     background-color: #f9f9f9;
     min-width: 160px;
+    margin-top: 2px;
     box-shadow: 0px 8px 16px 0px #00000033;
     z-index: 1;
 }
 
 .dropdown-content label {
     color: black;
-    padding: 12px 16px;
+    padding: 10px 15px;
     text-decoration: none;
     display: block;
 }
