--- a/asset/css/product.css
+++ b/asset/css/product.css
@@ -282,8 +282,46 @@
 }
 
 .login {
-    width: 40%;
-    padding: 40px 40px;
+    width: 35%;
+    padding: 40px 60px;
     background-color: #fff;
     box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.0008);
+}
+
+.login h2 {
+    color: #141b1fda;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.all-inputs {
+    margin-top: 8px;
+    padding: 10px 20px;
+    border-radius: 8px;
+    background-color: #f2f2f2c4;
+}
+
+.all-inputs input {
+    border: none;
+    outline: none;
+    font-size: 0.8rem;
+    background: unset;
+    font-family: "Poppins", sans-serif;
+}
+
+.password {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.forgot-password {
+    font-size: 0.8rem;
+    margin-top: 10px;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.forgot-password a {
+    color: #141b1fda;
 }
