--- a/asset/css/product.css
+++ b/asset/css/product.css
@@ -295,10 +295,14 @@
 }
 
 .all-inputs {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    -webkit-column-gap: 10px;
     margin-top: 10px;
     padding: 10px 20px;
     border-radius: 8px;
-    background-color: #f2f2f2c4;
+    background: #f4f3f3f7;
 }
 
 .all-inputs input {
