add to my repository

--- a/asset/css/product.css
+++ b/asset/css/product.css
@@ -313,7 +313,7 @@
     font-family: "Poppins", sans-serif;
 }
 
-.password {
+.passwo {
     display: flex;
     align-items: center;
     justify-content: space-between;
