add to my repository

--- a/asset/css/product.css
+++ b/asset/css/product.css
@@ -400,6 +400,7 @@
 }
 
 .left-side nav {
+    width: 100%;
     display: flex;
     gap: 10px;
     margin-left: 40px;
@@ -411,11 +412,18 @@
     width: 100%;
     display: flex;
     gap: 10px;
-    padding: 10px 15px;
+    padding: 8px 15px;
     color: #141b1fda;
     align-items: center;
     -webkit-column-gap: 10px;
     background-color: #ececec;
+    border-top-left-radius: 25px;
+    border-bottom-left-radius: 25px;
+}
+
+.left-side nav .act {
+    color: #fff;
+    background-color: #141b1fda;
 }
 
 .left-side nav a i {
