--- a/asset/css/product.css
+++ b/asset/css/product.css
@@ -396,13 +396,12 @@
     height: 100vh;
     display: flex;
     align-items: center;
-    box-shadow: 0px 1px 10px #ececec;
 }
 
 .left-side nav {
     display: flex;
     gap: 10px;
-    /* margin-left: 30px; */
+    margin-left: 30px;
     flex-direction: column;
     -webkit-column-gap: 10px;
 }
@@ -429,7 +428,7 @@
     background-color: #ececec;
     border-radius: 50%;
     padding: 8px 13px;
-    /* transition: background-color 0.3s, color 0.3s; */
+    transition: background-color 0.3s, color 0.3s;
 }
 
 .left-side nav a:hover {
@@ -453,7 +452,8 @@
 }
 
 .left-side nav .act i {
-    background-color: #ececec;
+    color: #fff;
+    background-color: #141b1fda;
 }
 
 .left-side nav .act:hover {
